Paypal & aws s3 bucket
